# clickhouser-desktop

./: README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.ts
.github/workflows/: manual-release-by-platform.yml  release.yml
src/: main.css  main.tsx
src-tauri/: Cargo.toml  Info.plist  clickmate.db  tauri.conf.json
src-tauri/src/: commands.rs  context.rs  errors.rs  main.rs  menu.rs
src-tauri/src/connections_repository/: clickhouse_connection.rs  commands.rs  mod.rs  repository.rs
src-tauri/src/database/: migrations.rs  mod.rs  security.rs
src-tauri/src/queries_repository/: commands.rs  mod.rs  query.rs  repository.rs
src-tauri/src/repository/: clickhouse_connection.rs  mod.rs
src/components/: ActionBar.tsx  App.tsx  Brand.tsx  Editor.tsx  EditorsPane.tsx  QueryForm.tsx
src/components/ActionBar/: ActionBar.tsx
src/components/App/: App.tsx
src/components/Console/: Console.tsx  index.ts  useConsole.ts
src/components/EditorsPane/: EditorsPane.tsx  index.ts
src/components/FirstTime/: EnterPassphraseDialog.tsx  FirstTimeDialog.tsx  constants.ts
src/components/Footer/: Footer.tsx
src/components/Result/: Result.tsx
src/contexts/: useConnectionContext.tsx  useTabsContext.tsx
src/hooks/: useApp.ts  useEditorsPane.ts  useHotKeys.ts  useListen.ts  useMonacoConfigSupplier.ts  useQueryForm.ts  useRunQueryEvent.ts  useSaveQuery.ts  useSaveQueryEvent.ts  useShortcutOnTooltip.ts
src/lib/: file-downloader.tsx
src/old-components/: Footer.tsx  QueryForm.tsx  Test.tsx
src/reducers/: sidebar-reducer.ts
(+114 files in other folders)
