[package]
name = "clickhouser-desktop"
version = "0.0.0"
description = "Clickhouse Desktop App"
authors = ["Antonio Vizuete <antoniovizuete@gmail.com>"]
license = "MIT"
repository = "https://github.com/antoniovizuete/clickhouser-desktop"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
base64 = "0.21.0"
directories = "4.0.1"
machine-uid = "0.2.0"
rusqlite = { version = "0.28.0", features = ["bundled-sqlcipher"] }
rusqlite_migration = "1.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha256 = "1.1.2"
tauri = { version = "1.2", features = ["os-all", "shell-open", "window-close"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
